# cmdy

./: .rusty-hook.toml  AGENCY.md  AGENTS.md  Cargo.toml  LICENSE  README.md  RELEASE_RECOVERY.md  TASK.md  agency.json  cmdy  hk.pkl  mise.toml  opencode.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml  semantic-prs.yml
examples/: docker-commands.toml  git-commands.toml
scripts/: check-commit-msg  pushable
src/: config.rs  executor.rs  loader.rs  main.rs  types.rs  ui.rs
tests/: integration.rs
tests/test_commands/: hello.toml  invalid.toml  ls.toml
