[package]
name = "cmdy"
version = "0.1.0"
edition = "2024"
authors = ["Mark Jaquith <mark@jaquith.me>"]
license = "MIT"
repository = "https://github.com/markjaquith/cmdy"
description = "Lists and runs predefined command snippets"

[package.metadata.alias]
fix = "clippy --fix && fmt"

[[bin]]
name = "cmdy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.36", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
shell-escape = "0.1.5"
tempfile = "3.19.1"
toml = "0.8.20"
arboard = "2"

