[package]
name = "cmdy"
version = "0.1.5"
edition = "2024"
authors = ["Mark Jaquith <mark@jaquith.me>"]
license = "MIT"
repository = "https://github.com/markjaquith/cmdy"
description = "Lists and runs predefined command snippets"
readme = "README.md"
keywords = ["cli", "commands", "runner"]
categories = ["command-line-utilities"]

[package.metadata.alias]
fix = "clippy --fix && fmt"

[package.metadata.release]
push = true
publish = true
consolidate-commits = false
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release {{version}}"

[[bin]]
name = "cmdy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.50", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
shell-escape = "0.1.5"
tempfile = "3.19.1"
toml = "0.8.20"
arboard = "2"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
ref_option = "allow"
unnecessary_wraps = "allow"
